# rds-terraform-ansible

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md
.github/workflows/: ansible.yml  build-and-push.yml
ansible/: Dockerfile  playbook.yml  pyproject.toml
app/: config.go  go.mod  go.sum  main.go
terraform/: README.md  ansible-iam.tf  data.tf  database.tf  db-iam-role.tf  ecr.tf  ecs-cluster.tf  ecs-iam.tf  ecs-task.tf  github-oidc.tf  go-lambda.tf  lambda.tf  locals.tf  main.tf  outputs.tf  vpc.tf
terraform/scripts/: lambda.tftpl
