[project]
name = "aws-ansible"
version = "0.0.1"
description = ""
authors = [
    {name = "Lays Rodrigues",email = "laysrodriguessilva@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.39.9,<2.0.0)",
    "ansible (>=11.8.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
